--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shunya9811.github.io/electric-commerce",
+  "homepage": "https://shunya9811.github.io/electric-commerce",
   "name": "electric-commerce",
   "version": "0.1.0",
   "private": true,
